# Orchestrators-benchmark

./: README.md  config_cluster.yaml  kubelet_config.yaml  test_json.json
argo-wf-values/argo-custom-namespace-setup/: Chart.yaml  values_team_a.yaml
bench-python-project/: pyproject.toml
bench-python-project/src/scripts/: monte_carlo.py  task1_delete_s3_and_tables.py  task2_s3_ingestion_and_compute.py  task3_wait_external_service.py  task4_copy_s3_to_postgres.py
benchmark-results-analysis/: results_dynamic_chart.ipynb
docs/: GLOBAL_INSTALLATION.md  OBSERVABILITY.md  ORCHESTRATORS_INSTALLATION.md  RESULTS.md  SCENARIOS.md
external_databases/: Chart.yaml  values.yaml
external_fastapi_service/: Dockerfile  fastapi-sleep-deployment.yaml  fastapi-sleep-service.yaml
fake_data_generation/: .gitignore  users.yaml
observability-stack/: Chart.yaml  values.yaml
templates/: app.yaml
temporal-code/: pyproject.toml
temporal-code/schedulers/: wf-scenar-1-1-task-1.json
temporal-code/src/: run_worker.py  run_worker_2b.py
temporal-code/src/activities/: bash_activities.py
temporal-code/src/activities/python_scripts/: python_script_scenar_2_b_task_1.py  python_script_scenar_2_b_task_2.py  python_script_scenar_2_b_task_3.py  python_script_scenar_2_b_task_4.py  utils.py
temporal-code/src/workflows/: workflow_scenar_1.py  workflow_scenar_2_a.py  workflow_scenar_2_b.py
windmill-code/: c_fastapi_sleep.resource-type.yaml  c_postgres_db.resource-type.yaml  wmill-lock.yaml
windmill-keda-autoscaling[draft]/: keda_auth.yaml  keda_scaler.yaml  prometheus.yaml  rbca.yaml
(+257 files in other folders)
