[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-benchmark"
version = "0.1.0"
description = "Temporal benchmark project"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

authors = [
  { name = "Bench Marc" }
]

dependencies = [
  "temporalio>=1.16.0",
]

[tool.setuptools]
packages = ["src"]